app-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 323149985350.dkr.ecr.us-east-1.amazonaws.com/dev-backend:backend-5
        ports:
          - containerPort: 3500
