app-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 323149985350.dkr.ecr.us-east-1.amazonaws.com/dev-frontend:frontend-10
        ports:
          - containerPort: 80
