app-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - joybassey.online
    - api.joybassey.online
    secretName: frontend-tls-secret
  rules:
    # Frontend
    - host: joybassey.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80

    # Backend
    - host: api.joybassey.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend    
              port:
                number: 3500
